PL-536: fixed header alignment

--- a/src/components/resources/table.scss
+++ b/src/components/resources/table.scss
@@ -16,13 +16,17 @@
 
 .selectedResource {
   min-width: 50px;
-  max-width: 100px;
+  max-width: 60px;
   margin: auto;
 }
 .resourceName {
+  min-width: 250px;
+  max-width: 300px;
+}
+
+.resourceNameValue {
   min-width: 100px;
   max-width: 200px;
-  margin: auto;
 }
 
 .fileType {
